Authentication with JWT and basic models for users, exercises, and training plans

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.application.name=demo
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_planner
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=${env.POSTGRES_USER}
+spring.datasource.password=${env.POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${env.HOST}:${env.PORT}/${env.POSTGRES_DATABASE}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+
+
+security.jwt.secret-key=${env.JWT_SECURITY_KEY}
+# 1h in millisecond
+security.jwt.expiration-time=3600000
+
+
