--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -11,3 +11,4 @@ security.jwt.secret-key=${env.JWT_SECURITY_KEY}
 security.jwt.expiration-time=3600000
 
 
+spring.thymeleaf.check-template-location=false
